# parthia

./: .gitignore  Cargo.toml  README.md
src/: fegame.rs  lib.rs  rng.rs  round.rs  simple_calc.rs  unit.rs  weapon.rs
