[package]
name = "parthia-lib"
version = "0.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
